@@ -24,8 +24,8 @@ dependencies {
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.1.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.4.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.5.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.5.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
